--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -7,16 +7,20 @@ parameters:
 
 doctrine:
     dbal:
-        # configure these for your database server
-        driver: 'pdo_mysql'
-        server_version: '5.7'
-        charset: utf8mb4
-        default_table_options:
-            charset: utf8mb4
-            collate: utf8mb4_unicode_ci
-
-        # With Symfony 3.3, remove the `resolve:` prefix
+        driver: 'pdo_sqlite'
+        server_version: '3.11'
         url: '%env(resolve:DATABASE_URL)%'
+#    dbal:
+#        # configure these for your database server
+#        driver: 'pdo_mysql'
+#        server_version: '5.7'
+#        charset: utf8mb4
+#        default_table_options:
+#            charset: utf8mb4
+#            collate: utf8mb4_unicode_ci
+#
+#        # With Symfony 3.3, remove the `resolve:` prefix
+#        url: '%env(resolve:DATABASE_URL)%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
