--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.jwt_token_authenticator:
+#        parent: lexik_jwt_authentication.security.guard.jwt_token_authenticator
+        class: App\Security\Guard\JWTAuthenticator
